[package]
name = "vos"
version = "0.1.0"
authors = ["mematrix"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["staticlib"]

[dependencies]
static_assertions = "1.1.0"
fdt = "0.1.4"
log = "0.4"
